# CAN_Application

./: .gitignore  CMakeLists.txt  app.overlay  lv_conf.h  prj.conf  readme.txt
config_default/: CMakeCache.txt
design/: design.drawio
script/: renode.bat
src/: main.c
src/CAN_received_data/: CAN_recv.c  CAN_recv.h
src/application_process/event_handler/: event_handler.c
src/application_process/gui_process/: gui_process.c  gui_process.h
src/application_process/receive_process/: receive_process.c  receive_process.h
src/event_handler/: event_handler.c  event_handler.h
src/low_level/CAN_device/: CAN_device.c  CAN_device.h
src/low_level/gui/: gui.c  gui.h
src/low_level/gui/gui_design/: gui_design.guiguider
src/low_level/gui/gui_design/custom/: custom.c  custom.h  custom.py
src/low_level/gui/gui_design/lvgl-simulator/: lv_conf.h
src/low_level/gui/gui_design/temp/: board.h
src/received_data/: recv_data.c  recv_data.h
src/test/: test_CAN.c  test_can.h
